Update Bot Control v6.4

--- a/Bot Control v6.4
+++ b/Bot Control v6.4
@@ -66,6 +66,7 @@ local cmdshotgun = true
 local cmdgun = true
 local cmdsmite = true
 local cmdfreeze = true
+local cmdunfreeze = true
 local cmdnoclip = true
 local cmdclip = true
 local cmdcopyanim = true
